Overflow on mobile devices fix

--- a/public/css/steamid.css
+++ b/public/css/steamid.css
@@ -105,6 +105,8 @@ h1 {
     display: block;
     border: 0px solid orange;
     border-radius: 30px;
+    min-width: 30vw;
+    max-width: 100vw;
 }
 
 #itemsBox {
@@ -114,6 +116,7 @@ h1 {
 ul {
     padding-left: 25px;
     list-style-type: none;
+    word-break: break-word;
 }
 
 li {
